Preliminar proposal with the aims of each section. Needs to be fill.

--- a/paper/inc/conclusions.tex
+++ b/paper/inc/conclusions.tex
@@ -1,3 +1,15 @@
-\section{Conclusions}\label{sec:conclusions}
+\section{Conclusions and future work}\label{sec:conclusions}
 
-\red{Conclusions goes here}.
+\red{Aim of this section: There are two parts: \\ The first one the conclusions of this project. What we can extract from our research. Could be useful? Important things that needs to be remarked, etc. \\ The second one the future work. What needs to be done in the future to solve some undesired behaviours, explore unresearched lines of this work, etc.}
+
+\red{[Conclusions part]}
+
+
+
+\red{[Future work]}
+
+\red{Search and analyse efficient ways of path choosing, being able to use the algorithm in resource-constrained computers. }
+
+\red{In the network could exist black holes, i.e: nodes that drop all the traffic. In order to mitigate the impact of such nodes in the whole network a reputation system could be used. By this way the reputation value will be shared among all the nodes in the network. The path choosing algorithm should be modified too to take this value into consideration in the choosing process. Finally this will lead into another security analysis due to the more reputation a node has, most probable is to be one of the chosen. }
+
+\red{The simulation model could be adapted to consider traffic modifications, generating the enough information to decrease the number of  failed contacts due to a bad contact prediction.}
