--- a/paper/inc/introduction.tex
+++ b/paper/inc/introduction.tex
@@ -1,3 +1,13 @@
 \section{Introduction}\label{sec:intro}
 
-\red{Introduction goes here}
+\red{Delay Tolerant Networks (DTNs) are a class of networks aimed to provide end-to-end communication into environments lacking continuous connectivity or with long delays. DTNs can also be used as a communication alternative when the internet internet network can not be trusted, e.g: unknown Wi-Fi hotspots.}
+
+\red{DTNs use the store-carry-and-forward principle, i.e: the node stores the message (bundle) received , carrying it if is needed and forwarding it when a connection opportunity occurs.}
+
+\red{Due to the nature of the DTNs the routing decision has been challenging since the beginning.}
+
+\red{The main problem w this kind of networks is mainly the routing and the security of the data exchanged. On the one hand due to the nature of the nodes of the DTN could be under continuous movement making the routing of the data a difficult task. On the other hand \red{\ldots}}
+
+\red{Onion routing is used to protect the communications online allowing to hide the origin or the source of the information as well as the data itself to the rest of the nodes that forwards the information.}
+
+\red{DTN Oracle: Information of the network as contact information (time of the contact and duration) and the public key of every single node of the network, in order to be able to do the Onion Routing.} 
