--- a/paper/inc/proposal.tex
+++ b/paper/inc/proposal.tex
@@ -1,3 +1,31 @@
 \section{Proposal}\label{sec:proposal}
 
-\red{Proposal goes here}.
+%\red{Aim of this section: •.}
+
+\red{Aim of this section: Brief introduction of what are we going to talk about in this section.}
+
+\subsection{Onion routing overview}
+
+\red{Aim of this section: As the onion routing is quite important in this research, explain briefly how it works.}
+
+First, we provide a high-level description of how the onion routing works ...
+
+\subsection{Oracle networks overview}
+
+\red{Aim of this section: As the oracle network is used, explain briefly how it works.}
+
+First, we provide a high-level description of how the onion routing works ...
+
+\subsection{Key Management in DTNs}
+
+\red{Aim of this section: In DTNs the Key Management is challenging, explain how we get rid of this problem: pre-shared keys as in public transportation networks nodes are known in advance.}
+
+%Key Management challenging... but in oracle Networks this could be done easily with pre-shared keys. Also, as in a predictable network there is always the same number of nodes, the management is even easier...
+
+\subsection{Path choosing}
+
+\red{Aim of this section: Explain what we did to get some useful paths according to a set of given parameters. Is important to explain the dynamic graph part, the algorithm itself, etc. \textbf{All theoretically!}} \\
+
+\red{Put some example showing the graph or the tree?} \\
+
+\red{\textbf{Important to remark!}: Non efficient algorithm, needs to be improved but it is just a prove of concept of deterministic choosing.}
