--- a/paper/inc/relatedwork.tex
+++ b/paper/inc/relatedwork.tex
@@ -1,3 +1,3 @@
 \section{Related work}\label{sec:rwork}
 
-\red{Related work goes here}.
+\red{Aim of this section: Show the existing research about this topic. Identify his flaws and explain briefly what we do to solve (or improve) them.}
