--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -134,19 +134,23 @@ Insitute 2\\
 \red{Abstract goes here}
 \end{abstract}
 
-\keywords{\red{Keywords goes here}}
+\keywords{Onion Routing, Delay-tolerant Network, Anonymous networking, Privacy, Security}
 
 \input{inc/introduction}
 
+\input{inc/relatedwork}
+
 \input{inc/proposal}
+
+\input{inc/securityanalysis}
 
 \input{inc/evaluation}
 
-\input{inc/relatedwork}
-
 \input{inc/conclusions}
 
-\input{inc/futurework}
+\subsubsection*{Acknowledgments}
+
+\red{Acknowledgments go here}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
