--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,12 +1,58 @@
-@inproceedings {Winery,
-    author = {Oliver Kopp and others},
-    title = {{Winery - A Modeling Tool for TOSCA-based Cloud Applications}},
-    booktitle = {Proceedings of 11\textsuperscript{th} International Conference on Service-Oriented Computing (ICSOC'13)},
-    publisher = {Springer Berlin Heidelberg},
-    series = {LNCS},
-    volume = {8274},
-    pages = {700--704},
-    year = {2013},
-    doi = {10.1007/978-3-642-45005-1_64},
-    keywords = {Cloud Applications; Modeling; TOSCA; Management; Portability},
- }
+@book{gross2013handbook,
+  title={Handbook of Graph Theory, Second Edition},
+  author={Gross, J.L. and Yellen, J. and Zhang, P.},
+  isbn={9781439880180},
+  lccn={2013038209},
+  series={Discrete Mathematics and Its Applications},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
+
+@book{dtn-book,
+  title={Delay- and Disruption-tolerant Networking},
+  author={Farrell, S. and Cahill, V.},
+  isbn={9781596930636},
+  lccn={2006050453},
+  series={Artech House telecommunications library},
+  year={2006},
+  publisher={Artech House}
+}
+
+@manual{ns-3-webpage,
+ author = {{Nsnam}},
+ title = {NS-3 webpage},
+ url = {https://www.nsnam.org},
+}
+
+@manual{ns-3-dtn,
+ author = {Dizhi Zhou},
+ title = {DTN Bundle Protocol},
+ url = {https://www.nsnam.org/wiki/Current_Development},
+}
+
+@manual{sumo,
+ author = {{Institute of Transportation Systems}},
+ title = {SUMO - Simulation of Urban MObility},
+ url = {http://www.dlr.de/ts/en/desktopdefault.aspx/tabid-9883/16931_read-41000},
+}
+
+@manual{josm,
+ author = {{Open Street Map}},
+ title = {JOSM},
+ url = {https://josm.openstreetmap.de},
+}
+
+@manual{bus-schedule,
+ author = {{UAB}},
+ title = {Horaris d'autobus 2015},
+ url = {http://www.uab.cat/doc/horaris_busUAB_2015},
+}
+
+@article{sumo-to-ns-2,
+  title={Simulation of VANET using ns-3 and SUMO},
+  author={Raj, Chitraxi and Upadhayaya, Urvik and Makwana, Twinkle and Mahida, Payal},
+  journal={International Journal of Advanced Research in Computer Science and Software Engineering},
+  volume={4},
+  pages={563--569},
+  year={2014}
+}
